--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,13 @@
         }
     ],
     "require": {
-        "php": ">=5.3.9",
-        "symfony/framework-bundle": "~2.7|~3.0|^4.0",
-        "symfony/translation": "~2.7|~3.0|^4.0"
+        "php": ">=7.3",
+        "symfony/framework-bundle": "^4.0|^5.0",
+        "symfony/translation": "^4.0|^5.0"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "~2.7|~3.0|^4.0",
-        "phpunit/phpunit": "~4.8|~5.7.11"
+        "symfony/phpunit-bridge": "^6.0",
+        "phpunit/phpunit": "^8.2"
     },
     "autoload":     {
         "psr-4": { "Lexik\\Bundle\\MaintenanceBundle\\": "" }
